2nd 인앱브라우저 해결

--- a/index.html
+++ b/index.html
@@ -13,6 +13,52 @@
     <!-- Inter 폰트 로드 -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     
+    <!-- (신규) In-App 브라우저 감지 및 외부 브라우저 전환 -->
+    <script>
+        (function() {
+            try {
+                const userAgent = navigator.userAgent;
+                const currentUrl = window.location.href;
+                
+                // 1. 카카오톡 인앱 브라우저 (자동 외부 실행)
+                if (userAgent.match(/KAKAOTALK/i)) {
+                    // 카카오톡은 외부 브라우저로 여는 URL 스킴을 제공
+                    location.href = 'kakaotalk://web/openExternal?url=' + encodeURIComponent(currentUrl);
+                    return; // 즉시 리디렉션
+                }
+
+                // 2. 기타 인앱 브라우저 (페이스북, 인스타그램, 일반 WebView 등)
+                // 'wv'는 Android의 WebView를 의미
+                if (userAgent.match(/FBAN|FBAV|Instagram|wv/i)) {
+                    // 이 경우, 앱 로드를 중단하고 사용자에게 안내 메시지를 표시
+                    document.body.innerHTML = `
+                        <div style="display: flex; align-items: center; justify-content: center; min-height: 100vh; background-color: #f3f4f6; padding: 1rem; font-family: sans-serif; text-align: center;">
+                            <div style="background-color: white; padding: 2rem; border-radius: 0.5rem; box-shadow: 0 4px 6px rgba(0,0,0,0.1); max-width: 400px;">
+                                <h2 style="font-size: 1.5rem; font-weight: bold; margin-bottom: 1rem; color: #1f2937;">외부 브라우저로 열어주세요</h2>
+                                <p style="color: #4b5563; margin-bottom: 1.5rem; line-height: 1.6;">
+                                    EZlive 화상강의는 인앱 브라우저를 지원하지 않습니다.
+                                    <br><br>
+                                    원활한 사용을 위해, 아래 링크를 복사하여 <strong>Chrome(크롬)</strong> 또는 <strong>Safari(사파리)</strong> 같은
+                                    기본 브라우저 앱에서 열어주세요.
+                                </p>
+                                <input type="text" value="${currentUrl}" readonly onclick="this.select()" style="width: 100%; box-sizing: border-box; padding: 0.75rem; border: 1px solid #d1d5db; border-radius: 0.25rem; font-size: 0.9rem; margin-bottom: 1rem; text-align: center;">
+                                <button 
+                                    onclick="try { this.previousElementSibling.select(); document.execCommand('copy'); alert('링크가 복사되었습니다!'); } catch(e) { alert('복사 실패. 수동으로 복사해주세요.'); }" 
+                                    style="width: 100%; padding: 0.75rem; background-color: #3b82f6; color: white; font-weight: 600; border: none; border-radius: 0.25rem; cursor: pointer; font-size: 1rem;">
+                                    링크 복사하기
+                                </button>
+                            </div>
+                        </div>
+                    `;
+                    // 이후 스크립트 실행을 중단시킴
+                    throw new Error("In-App browser detected. Stopping EZlive app load.");
+                }
+            } catch (e) {
+                console.warn(e.message);
+            }
+        })();
+    </script>
+
     <style>
         body {
             font-family: 'Inter', sans-serif;
